--- a/create-mobile.html
+++ b/create-mobile.html
@@ -960,8 +960,8 @@
     <div id="canvas-container">
         <canvas id="onion-skin-canvas" width="900" height="900"></canvas>
         <div id="comic-frame" onclick="deselectLayer(event)">
-            <div id="bg-drag-overlay" style="display:none;position:absolute;inset:0;z-index:200;cursor:grab;background:rgba(0,180,255,0.04);border:2px dashed rgba(0,180,255,0.3);box-sizing:border-box;">
-                <div style="position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,0.65);color:#00b4ff;font-size:11px;font-weight:900;padding:6px 14px;border-radius:8px;pointer-events:none;white-space:nowrap;">✋ Drag to pan background</div>
+            <div id="bg-drag-overlay" style="display:none;position:absolute;inset:0;z-index:200;cursor:grab;background:transparent;border:2px dashed rgba(0,180,255,0.45);box-sizing:border-box;">
+                <div style="position:absolute;bottom:10px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,0.72);color:#00b4ff;font-size:11px;font-weight:900;padding:5px 14px;border-radius:20px;pointer-events:none;white-space:nowrap;">✋ Drag to pan</div>
             </div>
         </div>
         <div id="global-frame-indicator"></div>
