--- a/profile.html
+++ b/profile.html
@@ -251,9 +251,14 @@
 <body>
 
 <div id="loading-screen">
-    <img src="https://media.discordapp.net/attachments/1472088820584419450/1475696543628656782/IMG_1899.gif?ex=699e6d01&is=699d1b81&hm=67222fde490cea1621bf751f5755e6d4188fbf1ea2db7be8292bef5258252ee5&=" alt="Loading...">
+    <blockquote class="imgur-embed-pub" lang="en" data-id="a/rGKC2or" data-context="false">
+        <a href="//imgur.com/a/rGKC2or"></a>
+    </blockquote>
+    
     <div class="loading-text">Loading Profile…</div>
 </div>
+
+<script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
     <!-- Followers/Following modal -->
     <div class="fol-overlay" id="fol-overlay" onclick="closeFolModal()">
@@ -552,14 +557,14 @@
 
             document.getElementById('view-name').innerText = profile.name || handle;
 
-            // Role tag — everyone gets "User" except @jeffyplays who gets "Owner"
+            // Role tag — everyone gets "Creator" except @jeffyplays who gets "Owner"
             const roleTag = document.getElementById('view-role-tag');
             if (handle === 'jeffyplays') {
-                roleTag.innerText = '👑 Owner';
+                roleTag.innerText = 'Owner';
                 roleTag.className = 'role-tag owner';
                 roleTag.style.display = 'inline-block';
             } else {
-                roleTag.innerText = 'User';
+                roleTag.innerText = 'Creator';
                 roleTag.className = 'role-tag';
                 roleTag.style.display = 'inline-block';
             }
