--- a/spritesource.html
+++ b/spritesource.html
@@ -211,6 +211,10 @@
 
     const ADMIN_ID = "de0b7378-e779-4e0d-9e3d-b33bf643df3e";
 
+    // ── Cache keys — declared early so all functions can reference them ──
+    const META_CACHE_KEY = 'cc_sprites_meta_v2';
+    const META_CACHE_TTL = 10 * 60 * 1000;
+
     // Check all possible field names Supabase / localStorage might use for the UUID
     function checkIsAdmin(user) {
         const uid = user.permanent_id || user.id || user.user_id || user.uid || '';
@@ -337,8 +341,6 @@
     }
 
     // ── Caching & Lazy Loading ──
-    const META_CACHE_KEY = 'cc_sprites_meta_v2';
-    const META_CACHE_TTL = 10 * 60 * 1000; 
 
     function saveMetaCache(data) {
         try { localStorage.setItem(META_CACHE_KEY, JSON.stringify({ ts: Date.now(), data })); } catch(e) {}
